# cafeteria-asyncio

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .sonarcloud.properties  .travis.yml  README.md  pyproject.toml  pytest.ini  tox.ini
.github/: dependabot.yml
.github/workflows/: code-quality.yml  release.yml  test-suite.yml
cafeteria/asyncio/: callbacks.py  commons.py
cafeteria/asyncio/patterns/: application.py
src/cafeteria/asyncio/: commons.py  synchronous.py
src/cafeteria/asyncio/patterns/: application.py
tests/: test_cafeteria_asyncio.py  test_callbacks.py  test_callbacks_registry.py  test_commons.py
