[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "cafeteria-asyncio"
packages = [
    { include = "cafeteria" },
]
version = "0.2.1"
description = "An extension to the cafeteria package to enable asyncio specific patterns for python 3.7 and above applications/libraries."
authors = [
    "Arun Babu Neelicattu <arun.neelicattu@gmail.com>"
]
license = "APLv2"
readme = "README.md"
repository = "https://github.com/abn/cafeteria-asyncio"
keywords = []
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: AsyncIO"
]

[tool.poetry.dependencies]
python = "^3.7"
cafeteria = "^0"

[tool.poetry.dev-dependencies]
pre-commit = "^1.18"
flake8 = "^3.7"
coverage = "^4.5"
black = "^19.3b0"
tox = "^3.13"
pytest = "^5.0"
bumpversion = "^0.5.3"
pytest-asyncio = "^0.10.0"
pytest-mock = "^2.0.0"
pytest-coverage = "^0.0"
