[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
src_paths = ["src", "test"]
known_first_party = "cafeteria"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry]
name = "cafeteria-asyncio"
packages = [
    { include = "cafeteria", from = "src" },
]
version = "0.3.0"
description = "An extension to the cafeteria package to enable asyncio specific patterns for python 3.7 and above applications/libraries."
authors = [
    "Arun Babu Neelicattu <arun.neelicattu@gmail.com>"
]
license = "APLv2"
readme = "README.md"
repository = "https://github.com/abn/cafeteria-asyncio"
keywords = []
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO"
]

[tool.poetry.dependencies]
python = "^3.8"
cafeteria = "^0,!=0.22.0"

[tool.poetry.dev-dependencies]
coverage = "^7.4"
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-mock = "^3.12"
pytest-cov = "^4.1"
